# azure-deployer

./: .gitignore  README.md  codebuff.json  deployer.py  infra.yaml  knowledge.md  main.py  provisioner.py  pyproject.toml  region-analysis.json  usable.py
bicep/: main.bicep  main.parameters.json
bicep/arm/: main.json
provisioner/: __init__.py
provisioner/bicep/: __init__.py  generator.py  models.py
provisioner/bicep/builders/: __init__.py  container_env.py  log_analytics.py  postgres.py  static_site.py
provisioner/bicep/templates/: base.bicep  parameters.json
provisioner/manifest/: __init__.py  parser.py  schema.py  updater.py
provisioner/quota/: __init__.py  checker.py  models.py  providers.py  resolver.py
scripts/: quota_check.py  resolve_sdks.py
specs/: bicep-research.md  deployer-spec.md  example-deployment.md  mvp_plan.md  provisioner-plan.md  provisioner-spec.md  quota-rest-research.md
tests/: __init__.py
tests/test_bicep/: test_generator.py
tests/test_manifest/: test_parser.py
tests/test_quota/: test_checker.py  test_container_apps_provider.py
